# goldberg_emulator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  build_steamos.sh  build_win_debug_experimental.bat  build_win_debug_experimental_steamclient.bat  build_win_lobby_connect.bat  build_win_release.bat  build_win_release_experimental.bat  build_win_release_experimental_steamclient.bat  compile.bat
controller/: gamepad.c  gamepad.h
dll/: base.cpp  base.h  common_includes.h  flat.cpp  local_storage.cpp  network.cpp  network.h  settings.h  source_query.cpp  source_query.h  steam_client.cpp  steam_controller.h  steam_friends.h  steam_gameserver.cpp  steam_gameserver.h  steam_matchmaking.h  steam_user_stats.h  steam_utils.h  wrap.cpp
generate_game_infos/: generate_game_infos.cpp
overlay_experimental/: steam_overlay.h
sdk_includes/: isteamgameserver012.h  isteamnetworkingsockets.h  steam_api_flat.h
